Text selection way more visible now. Fixes #1

--- a/styles/base.less
+++ b/styles/base.less
@@ -47,6 +47,17 @@ atom-text-editor.is-focused, :host(.is-focused) {
     }
     .selection .region {
         background-color: @syntax-selection-color;
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            border: 2px solid @syntax-selection-color;
+            border-radius: 3px;
+        }
     }
     .line-number.cursor-line-no-selection, .line.cursor-line {
         background-color: rgba(0, 0, 0, 0.19);
@@ -107,6 +118,10 @@ atom-text-editor.is-focused, :host(.is-focused) {
 }
 .meta.class {
     color: #B2CCD6;
+
+    .entity.name {
+        color: desaturate(@md-amber, 15%);
+    }
 }
 .keyword.other.special-method {
     color: #89DDFF;
