--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,7 +4,7 @@
 // General colors
 @syntax-text-color: darken(#AABBC3, 5%);
 @syntax-cursor-color: #009688;
-@syntax-selection-color: fade(@syntax-text-color, 15%);
+@syntax-selection-color: lighten(@syntax-background-color, 5%);
 @syntax-background-color: #212121;
 @syntax-comments-color: #444;
 
